fixed image spacing for mobile testing video size

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -170,8 +170,8 @@
   position: relative;
   width: 100%;
   height: auto;
-  min-height: 35rem;
-  padding: 15rem 0;
+  min-height: 25rem;
+  padding: 8rem 0;
   /* background-image: url("../img/worldOnBottomHalf.jpg"); */
   /* padding-top: 10rem; */
   background: -webkit-gradient(linear, left top, left bottom, from(#161616), color-stop(65%, rgba(22, 22, 22, 0.5)), url("../img/worldOnBottomHalf.jpg"));
@@ -218,7 +218,7 @@
 }
 
 .signup-section {
-  padding: 10rem 0;
+  padding: 1rem 0;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-signup.jpg");
   background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-signup.jpg");
   background-position: center;
